--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ button.ghost{background:#f5f5f5;border:none}
 
     <!-- Banners -->
     <div class="banner" style="margin-bottom:12px">
-      <img id="bannerImg" src="" alt="Primary banner">
+      <img id="bannerImg" src="" alt="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png">
     </div>
     <div class="banner">
       <img id="bannerImg2" src="" alt="Secondary banner">
