--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ button.ghost{background:#f5f5f5;border:none}
       <img id="bannerImg" src="" alt="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png">
     </div>
     <div class="banner">
-      <img id="bannerImg2" src="" alt="Secondary banner">
+      <img id="bannerImg2" src="" alt="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png">
     </div>
 
     <h3 id="homeTitle">RJ पापड़ — Welcome</h3>
