--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ div[style*="display:flex"]{gap:10px !important}
   <!-- AUTH area -->
   <div id="authCard" class="card">
     <div class="logo-top">
-      <img id="logoImg" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png">
+      <img id="logoImg" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_0000000040986208ae9fdd85a3a3cbc8.png">
     </div>
     <h2 id="authTitle">Register / Login</h2>
 
