--- a/index.html
+++ b/index.html
@@ -1,178 +1,263 @@
 <!doctype html>
-<html lang="hi">
+<html>
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>RJ Papad – Wallet / Team</title>
-<style>
-:root{--accent:#ffb300;--bg:#fff8e1;--card:#fff;--muted:#555}
-*{box-sizing:border-box}
-body{margin:0;font-family:system-ui,sans-serif;background:var(--bg)}
-header{background:var(--accent);color:#000;display:flex;align-items:center;padding:10px}
-.menu-btn{font-size:24px;cursor:pointer}
-.brand{flex:1;text-align:center;font-weight:600}
-.container{max-width:900px;margin:auto;padding:10px}
-.card{background:var(--card);padding:16px;border-radius:12px;margin:10px 0;box-shadow:0 2px 4px rgba(0,0,0,.1)}
-.hidden{display:none}
-.banner img{width:100%;border-radius:8px}
-.langbar{display:flex;gap:8px;margin-bottom:8px}
-.logo-top{display:flex;justify-content:center;margin-bottom:12px}
-.logo-top img{max-width:160px;border-radius:12px}
-.small{font-size:14px;color:var(--muted)}
-button.primary{background:var(--accent);border:none;padding:10px 18px;border-radius:8px;font-weight:600}
-button.ghost{background:#f2f2f2;border:none;padding:10px 18px;border-radius:8px}
-div[style*="display:flex"]{gap:10px !important}
-</style>
-</head>
-
-<body>
-<header>
-  <div class="menu-btn" id="menuToggle">☰</div>
-  <div class="brand">RJ Papad</div>
-</header>
-
-<!-- Drawer -->
-<div id="drawer" class="drawer card hidden">
-  <h3>Menu</h3>
-  <button id="btnWallet">💰 Wallet</button>
-  <button id="btnMyTeam">👥 My Team</button>
-  <button id="btnTree">🌳 My Tree</button>
-  <button id="btnOrder">🛒 Place Order</button>
-  <hr style="margin:12px 0"/>
-  <button id="btnAdmin">🔐 Admin</button>
-  <div style="height:8px"></div>
-  <button id="btnLogout">🚪 Logout</button>
-</div>
-
-<div id="overlay"></div>
-
-<!-- Main container -->
-<div class="container">
-  <!-- AUTH area -->
-  <div id="authCard" class="card">
-    <div class="logo-top">
-      <img id="logoImg" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_0000000040986208ae9fdd85a3a3cbc8.png">
-    </div>
-    <h2 id="authTitle">Register / Login</h2>
-
-    <div id="fullRegisterBlock">
-      <label>नाम (optional)</label>
-      <input id="reg_name" placeholder="आपका नाम">
-      <div style="height:8px"></div>
-
-      <label>मोबाइल नंबर (required)</label>
-      <input id="reg_mobile" placeholder="10 अंकों का मोबाइल नंबर">
-      <div style="height:8px"></div>
-
-      <label>Parent / Joined by (optional)</label>
-      <input id="reg_parent" placeholder="Parent user मोबाइल">
-      <div style="height:8px"></div>
-
-      <div style="display:flex;gap:8px;">
-        <button id="registerBtn" class="primary">Register</button>
-        <button id="registerCancelBtn" class="ghost">Cancel</button>
-      </div>
-    </div>
-
-    <div id="loginOnlyBlock" class="hidden">
-      <label>मोबाइल नंबर (Login)</label>
-      <input id="login_mobile" placeholder="10 अंकों का मोबाइल नंबर">
-      <div style="height:8px"></div>
-      <div style="display:flex;gap:8px;">
-        <button id="loginOnlyBtn" class="primary">Login</button>
-        <button id="showRegisterForJoinBtn" class="ghost">Register</button>
-      </div>
-    </div>
-
-    <div id="authMsg" class="small"></div>
-  </div>
-
-  <!-- Banners -->
-  <div class="banner" style="margin-bottom:8px;">
-    <img id="bannerImg" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png">
-  </div>
-  <div class="banner">
-    <img id="bannerImg2" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png">
-  </div>
-
-  <!-- Wallet area -->
-  <div id="walletArea" class="card hidden">
-    <h3>My Wallet</h3>
-    <div style="font-size:24px"><div class="small" id="balance">₹0.00</div></div>
-  </div>
-</div>
-
-<script>
-const menuToggle=document.getElementById('menuToggle');
-const drawer=document.getElementById('drawer');
-const overlay=document.getElementById('overlay');
-const walletArea=document.getElementById('walletArea');
-const authCard=document.getElementById('authCard');
-
-// Hide all visible sections
-function hideAll(){
-  document.querySelectorAll('.card').forEach(c=>c.classList.add('hidden'));
-}
-
-/* ✅ UPDATED: MENU CLICK => OPEN WALLET */
-menuToggle.onclick = () => {
-  drawer.classList.toggle('hidden');
-  // --- Show wallet directly ---
-  hideAll();
-  walletArea.classList.remove('hidden');
-};
-
-/* ✅ UPDATED: LOGIN => OPEN WALLET */
-function enterApp(){
-  authCard.classList.add('hidden');
-  hideAll();
-  walletArea.classList.remove('hidden');
-}
-</script>
-  // ========== REGISTER & CANCEL BUTTONS FUNCTIONALITY ==========
-
-// REGISTER BUTTON
-const registerBtn = document.getElementById('registerBtn');
-const registerCancelBtn = document.getElementById('registerCancelBtn');
-const regName = document.getElementById('reg_name');
-const regMobile = document.getElementById('reg_mobile');
-const regParent = document.getElementById('reg_parent');
-const authMsg = document.getElementById('authMsg');
-
-if (registerBtn) {
-  registerBtn.addEventListener('click', () => {
-    const name = regName.value.trim();
-    const mobile = regMobile.value.trim();
-    const parent = regParent.value.trim();
-
-    // Validation
-    if (mobile.length !== 10 || isNaN(mobile)) {
-      authMsg.textContent = "कृपया 10 अंकों का मोबाइल नंबर डालें";
-      authMsg.style.color = "red";
-      return;
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>RJ Papad - Register</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background: #fffbe6;
+      overflow: hidden;
     }
 
-    // Save data (localStorage में)
-    localStorage.setItem('userName', name);
-    localStorage.setItem('userMobile', mobile);
-    localStorage.setItem('userParent', parent);
+    /* Splash Screen */
+    #splash {
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background: radial-gradient(circle, #fffbe6 40%, #ffe69a 100%);
+      transition: opacity 0.8s ease;
+      z-index: 10;
+    }
 
-    // Show success message
-    authMsg.textContent = "रजिस्टर सफल ✅";
-    authMsg.style.color = "green";
+    #splash img.logo {
+      width: 180px;
+      border-radius: 20px;
+      margin-bottom: 30px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
 
-    // Open Wallet
-    enterApp();
-  });
-}
+    /* Language Buttons */
+    .lang-buttons {
+      display: flex;
+      gap: 12px;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
 
-// CANCEL BUTTON
-if (registerCancelBtn) {
-  registerCancelBtn.addEventListener('click', () => {
-    document.getElementById('fullRegisterBlock').classList.add('hidden');
-    document.getElementById('loginOnlyBlock').classList.remove('hidden');
-    authMsg.textContent = "";
-  });
-}
+    .lang-buttons button {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      padding: 10px 18px;
+      font-size: 16px;
+      font-weight: bold;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: transform 0.2s, background 0.3s;
+      color: #000;
+    }
+
+    .lang-buttons button img {
+      width: 22px;
+      height: 16px;
+      border-radius: 3px;
+      box-shadow: 0 0 3px rgba(0,0,0,0.3);
+    }
+
+    .lang-buttons button:hover {
+      transform: scale(1.08);
+    }
+
+    .hindi { background: #ffcc33; }
+    .english { background: #33ccff; }
+    .gujarati { background: #cc99ff; }
+
+    /* Hidden Content */
+    #content {
+      display: none;
+      padding: 20px;
+      text-align: center;
+      animation: fadeInUp 0.8s ease;
+    }
+
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    input, button {
+      padding: 10px;
+      margin: 6px 0;
+      width: 100%;
+      max-width: 320px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+
+    button#registerBtn {
+      background: #ffcc33;
+      border: none;
+      cursor: pointer;
+      font-weight: bold;
+      transition: background 0.3s;
+    }
+
+    button#registerBtn:hover {
+      background: #ffbb00;
+    }
+
+    pre {
+      background: #f4f4f4;
+      padding: 10px;
+      max-width: 600px;
+      margin: 0 auto;
+      border-radius: 6px;
+      text-align: left;
+    }
+
+    /* Banner Section */
+    .banner {
+      margin: 10px auto;
+    }
+    .banner img {
+      width: 100%;
+      max-width: 600px;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+    }
+
+    /* Welcome Text */
+    .welcome-text {
+      font-size: 20px;
+      font-weight: bold;
+      color: #c47f00;
+      margin: 10px 0 20px 0;
+    }
+  </style>
+</head>
+<body>
+  <!-- Splash Screen -->
+  <div id="splash">
+    <img src="logo.png" alt="RJ Papad Logo" class="logo" />
+    <div class="lang-buttons">
+      <button class="hindi" onclick="selectLang('hindi')">
+        <img src="https://flagcdn.com/w20/in.png" alt="IN"> हिंदी
+      </button>
+      <button class="english" onclick="selectLang('english')">
+        <img src="https://flagcdn.com/w20/gb.png" alt="EN"> English
+      </button>
+      <button class="gujarati" onclick="selectLang('gujarati')">
+        <img src="https://flagcdn.com/w20/in.png" alt="IN"> ગુજરાતી
+      </button>
+    </div>
+  </div>
+
+  <!-- Hidden Content -->
+  <div id="content">
+    <!-- ✅ पहला बैनर -->
+    <div class="banner">
+      <img id="bannerTop" src="banner1-hindi.jpg" alt="Top Banner" />
+    </div>
+
+    <!-- 🌟 Welcome Text (भाषा अनुसार बदलेगा) -->
+    <div id="welcomeText" class="welcome-text">
+      RJ पापड़ में आपका स्वागत है!
+    </div>
+
+    <!-- ✅ दूसरा बैनर -->
+    <div class="banner">
+      <img id="bannerBottom" src="banner2-hindi.jpg" alt="Bottom Banner" />
+    </div>
+
+    <!-- Registration Form -->
+    <h2 id="title">रजिस्टर करें (Mobile Number से)</h2>
+
+    <div>
+      <input id="name" placeholder="नाम (वैकल्पिक)" />
+      <input id="mobile" placeholder="मोबाइल नंबर (अनिवार्य)" />
+      <button id="registerBtn">रजिस्टर करें</button>
+    </div>
+
+    <pre id="result"></pre>
+  </div>
+
+  <script>
+    const translations = {
+      hindi: {
+        title: "रजिस्टर करें (Mobile Number से)",
+        name: "नाम (वैकल्पिक)",
+        mobile: "मोबाइल नंबर (अनिवार्य)",
+        button: "रजिस्टर करें",
+        error: "❌ कृपया मोबाइल नंबर डालें",
+        bannerTop: "banner1-hindi.jpg",
+        bannerBottom: "banner2-hindi.jpg",
+        welcome: "RJ पापड़ में आपका स्वागत है!"
+      },
+      english: {
+        title: "Register (Using Mobile Number)",
+        name: "Name (optional)",
+        mobile: "Mobile number (required)",
+        button: "Register",
+        error: "❌ Please enter your mobile number",
+        bannerTop: "banner1-english.jpg",
+        bannerBottom: "banner2-english.jpg",
+        welcome: "Welcome to RJ Papad!"
+      },
+      gujarati: {
+        title: "નોંધણી કરો (મોબાઇલ નંબરથી)",
+        name: "નામ (વૈકલ્પિક)",
+        mobile: "મોબાઇલ નંબર (જરૂરી)",
+        button: "નોંધણી કરો",
+        error: "❌ કૃપા કરીને મોબાઇલ નંબર દાખલ કરો",
+        bannerTop: "banner1-gujarati.jpg",
+        bannerBottom: "banner2-gujarati.jpg",
+        welcome: "RJ પાપડમાં આપનું સ્વાગત છે!"
+      }
+    };
+
+    let selectedLang = "hindi";
+
+    function selectLang(lang) {
+      selectedLang = lang;
+      const t = translations[lang];
+
+      // भाषा अनुसार content बदलो
+      document.getElementById("title").textContent = t.title;
+      document.getElementById("name").placeholder = t.name;
+      document.getElementById("mobile").placeholder = t.mobile;
+      document.getElementById("registerBtn").textContent = t.button;
+      document.getElementById("bannerTop").src = t.bannerTop;
+      document.getElementById("bannerBottom").src = t.bannerBottom;
+      document.getElementById("welcomeText").textContent = t.welcome;
+
+      // Splash छुपाओ और content दिखाओ
+      document.getElementById("splash").style.opacity = "0";
+      setTimeout(() => {
+        document.getElementById("splash").style.display = "none";
+        document.body.style.overflow = "auto";
+        document.getElementById("content").style.display = "block";
+      }, 800);
+    }
+
+    document.getElementById("registerBtn").addEventListener("click", async () => {
+      const name = document.getElementById("name").value.trim();
+      const mobile = document.getElementById("mobile").value.trim();
+      const t = translations[selectedLang];
+
+      if (!mobile) {
+        document.getElementById("result").innerText = t.error;
+        return;
+      }
+
+      try {
+        const res = await fetch("/api/register", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ name, mobile, lang: selectedLang })
+        });
+        const data = await res.json();
+        document.getElementById("result").innerText = JSON.stringify(data, null, 2);
+      } catch (err) {
+        document.getElementById("result").innerText = "Error: " + err.message;
+      }
+    });
+  </script>
 </body>
 </html>
