--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         welcome: "RJ પાપડમાં આપનું સ્વાગત છે!"
       }
     };
-
+window.selectLang = selectLang;
     let selectedLang = "hindi";
 
     function selectLang(lang) {
