--- a/index.html
+++ b/index.html
@@ -302,35 +302,29 @@ window.selectLang = selectLang;
         return;
       }
 
+// DELETE the previous try/await fetch(...) block and paste this instead
 try {
-  const res = await fetch("YOUR_API_URL_HERE", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({
-      name,
-      mobile,
-      lang: selectedLang
-    })
+  // YOUR_API_URL_HERE को अपने असली endpoint से बदलें
+  const url = new URL("YOUR_API_URL_HERE");
+  url.searchParams.set("name", name);
+  url.searchParams.set("mobile", mobile);
+  url.searchParams.set("lang", selectedLang);
+
+  const res = await fetch(url.toString(), {
+    method: "GET",
+    headers: { "Accept": "application/json" } // optional
   });
 
   const text = await res.text();
-
-  if (!res.ok) {
-    throw new Error("Server returned " + res.status + ": " + text.slice(0, 200));
-  }
+  if (!res.ok) throw new Error("Server returned " + res.status + ": " + text.slice(0,200));
 
   let data;
-  try {
-    data = JSON.parse(text);
-  } catch (parseErr) {
-    throw new Error("Invalid JSON response: " + text.slice(0, 200));
-  }
+  try { data = JSON.parse(text); }
+  catch(e) { throw new Error("Invalid JSON response: " + text.slice(0,200)); }
 
-  // ✅ Registration successful
-  localStorage.setItem("registered", "true");
+  // success
+  localStorage.setItem("registered","true");
   localStorage.setItem("userMobile", mobile);
-
-  // redirect to people page (change filename if needed)
   window.location.href = "people.html";
 } catch (err) {
   document.getElementById("result").innerText = "Error: " + err.message;
