--- a/index.html
+++ b/index.html
@@ -302,36 +302,15 @@ window.selectLang = selectLang;
         return;
       }
 
+// temporary network test - paste inside your register handler instead of real fetch
 try {
-  // <-- बदलें: नीचे का URL अपने असली endpoint से बदलें (यहाँ दिखा example है)
-  const base = "https://your-api-domain.com/register"; // <-- full URL होना चाहिए (https://...)
-  const params = new URLSearchParams({
-    name: name || "",
-    mobile: mobile || "",
-    lang: selectedLang || "hindi"
-  });
-  const url = base + "?" + params.toString();
-
-  const res = await fetch(url, {
-    method: "GET",
-    headers: { "Accept": "application/json" }
-  });
-
+  const testUrl = "https://httpbin.org/get?name=" + encodeURIComponent(name || "") + "&mobile=" + encodeURIComponent(mobile || "");
+  const res = await fetch(testUrl, { method: "GET" });
   const text = await res.text();
-  if (!res.ok) throw new Error("Server returned " + res.status + ": " + text.slice(0,200));
-
-  let data;
-  try { data = JSON.parse(text); }
-  catch(e) { throw new Error("Invalid JSON response: " + text.slice(0,200)); }
-
-  // success
-  localStorage.setItem("registered","true");
-  localStorage.setItem("userMobile", mobile);
-  window.location.href = "people.html";
-
+  document.getElementById('result').innerText = 'Test OK: ' + text.slice(0,200);
 } catch (err) {
-  document.getElementById("result").innerText = "Error: " + err.message;
-    }
+  document.getElementById('result').innerText = 'Network test failed: ' + err.message;
+}
     });
   </script>
 </body>
