--- a/index.html
+++ b/index.html
@@ -323,6 +323,28 @@ try {
   window.location.href = "people.html";
 } catch (err) {
   document.getElementById("result").innerText = "Error: " + err.message;
+  // ✅ Step 2: Language buttons को दोबारा चलाने के लिए
+window.addEventListener('DOMContentLoaded', () => {
+  // सभी language buttons पकड़ो
+  document.querySelectorAll('.lang-buttons button').forEach(btn => {
+    // class देखकर भाषा पहचानो
+    const lang = btn.classList.contains('hindi')
+      ? 'hindi'
+      : btn.classList.contains('english')
+      ? 'english'
+      : 'gujarati';
+
+    // क्लिक होने पर भाषा बदलो
+    btn.addEventListener('click', () => {
+      console.log('Language selected:', lang);
+      if (typeof selectLang === 'function') {
+        selectLang(lang);
+      } else {
+        alert('selectLang function not found!');
+      }
+    });
+  });
+});
 }
   </script>
 </body>
